	(DISPLAY-AUTHORIZATION): move STACK_to_mv past X_CALL
	(CREATE-WINDOW): use macro SLOT
	(get_event_mask): define as check_event_mask_of_list
	(make_event_mask): define as make_uint32
	(CREATE-PIXMAP, PROCESS-EVENT): use error_required_keywords()
	instead of NOTIMPLEMENTED
	(SEND-EVENT): fix the signature and use grasp()
	(dpy_wait): add
	(travel_queque, EVENT-LISTEN): use it

2008-11-06  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (COPY-GCONTEXT-COMPONENTS):
	fix handling of the &rest arguments

2008-11-06  Sam Steingold  <sds@gnu.org>

	save "delegating" executable images which only parse --clisp* args
	* pathname.d (SAVEMEM): second argument EXECUTABLE can be 0 to
	mean delegate all command line options to the INIT-FUNCTION,
	only parse --clisp - prefixed options
	* spvw.d (usage): accept delegating argument
	(delegating_cookie, delegating_cookie_length, delegating_p): add
	(parse_options): when delegating_p returns true, only handle
	options prefixed with --clisp
	* spvw_memfile.d (savemem): second argument is a uintL, not a bool
	(find_marker): always present
	(savemem_with_runtime): when the second argument delegating is
	true, reset the delegating cookie
	* lispbibl.d (savemem): update the prototype

2008-11-06  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-LAMBDABODY): tweak the 2008-11-02 patch: when
	NAME is an integer, use SYMBOL-SUFFIX for FNODE-NAME and do NOT
	save the new *FUNC* in *FNODE-LIST* (i.e., treat it as IGNORABLE)
	(c-FUNCTION, c-%GENERIC-FUNCTION-LAMBDA, c-%OPTIMIZE-FUNCTION-LAMBDA):
	pass (incf *anonymous-count*) as name to c-LAMBDABODY

2008-11-05  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (open-http): write http error to *HTTP-LOG-STREAM*,
	not *TERMINAL-STREAM*

2008-11-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (LPARTS): add timezone only when needed (not unix &
	not win32), i.e., never; add deflanguage files only when building
	with_unicode & with_gettext

2008-11-02  Sam Steingold  <sds@gnu.org>
